--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-native-firebase/app": "^12.7.5",
     "@react-native-firebase/messaging": "^12.7.5",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.6.0"
   },
